Added in padding for 'header-bar' elements.
This spaces out the header bar a little bit, which in certain
applications (e.g. Nautilus) was looking somewhat cramped.

--- a/Containers.styl
+++ b/Containers.styl
@@ -47,6 +47,10 @@ GtkWindow
     background-color: Blue;
     color: Green;
 
+
+.header-bar
+    padding: 0.25em;
+
 /* POPUP - Controls the base windows used for context, drop-down, and combo-box menus.
  *
  *      NOTES:
