Adjusted some padding values.
I changed some values for GtkNotebook padding and set the tab icon
padding to 1 pixel because, in at least one application (Nautilus),
the 'close' button on notebook tabs was causing the entire header
section to become disproportionately large.

--- a/Notebook.styl
+++ b/Notebook.styl
@@ -12,8 +12,8 @@ GtkNotebook.notebook
     -GtkNotebook-tab-overlap:   -5;
     -GtkNotebook-tab-fill:      true;
 
-    padding-bottom: 0.25em;
-    padding-top:    0.5em;
+    padding-bottom: 0.125em;
+    padding-top:    0.25em;
 
     /* HEADER - Governs the area where tabs are located for the notebook. */
     &.header
@@ -78,6 +78,7 @@ GtkNotebook.notebook
         .button,
         .button.flat
             flat();
+            padding:                        1px;
             > GtkImage                      { color: TextColor; }
             &:backdrop > GtkImage           { color: TextColorDim; }
             &:hover > GtkImage              { color: Red; }
