Fixed combobox text not being highlighted after 15.10 upgrade.

--- a/Controls.styl
+++ b/Controls.styl
@@ -74,7 +74,7 @@ GtkComboBox
     // Governs the available combobox options (i.e. while it is expanded)
     //
     //      Unfortunately, for the time being, this appears to be the only way to manipulate text within the combobox menu.
-    .menuitem:hover > *
+    .menuitem:hover *
         color:                  TextColorSelected;
 
 
