--- a/Buttons.styl
+++ b/Buttons.styl
@@ -91,7 +91,8 @@ column-header
         border-right:       1px solid transparent;
 
 /* TITLEBUTTON - Governs the standard close, maximize, and minimize buttons for CSD windows. */
-.csd .titlebar.header-bar .button.titlebutton
+.csd .titlebar.header-bar .button.titlebutton,
+.solid-csd .titlebar.header-bar .button.titlebutton
     shallow-inset();
 
     background-image:   none;
