Fixed notebook selected tab shadowing in 15.10 upgrade.
Evidently, the folks at GTK+ decided that the old way of calculating
shadow sizes needed changing (good God, why?). I therefore tweaked
the shadows on tabs that produce the glowing effect when one is
selected so that they no longer look like complete shit. I still
might have to come back and tweak them some more.

--- a/Notebook.styl
+++ b/Notebook.styl
@@ -36,23 +36,14 @@ GtkNotebook.notebook
 
         /* ACTIVE - Governs the active tab page for the notebook. */
         &:active
-            &.bottom
-                box-shadow:     inset 0px 7px 5px -5px SelectionColor,
-                                inset 0px 1px 1px SelectionColor;
-                &:backdrop
-                    box-shadow: inset 0px 1px 1px HighlightColor;
-            &.left
-                box-shadow:     inset 7px 0px 5px -5px SelectionColor,
-                                inset 1px 0px 1px SelectionColor;
-                &:backdrop
-                    box-shadow: inset 1px 0px 1px HighlightColor;
-            &.right
-                box-shadow:     inset -7px 0px 5px -5px SelectionColor,
-                                inset -1px 0px 1px SelectionColor;
+            &.right, &.left
+                box-shadow: inset -7px 0px 3px -6px SelectionColor,
+                            inset -1px 0px 1px SelectionColor;
                 &:backdrop
                     box-shadow: inset -1px 0px 1px HighlightColor;
-            &.top
-                box-shadow:     inset 0px -7px 5px -5px SelectionColor,
+
+            &.top, &.bottom
+                box-shadow:     inset 0px -7px 3px -6px SelectionColor,
                                 inset 0px -1px 1px SelectionColor;
                 &:backdrop
                     box-shadow: inset 0px -1px 1px HighlightColor;
